# wine_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py  scraper.py
app/router/api_v1/comercializacao/: routers.py
app/router/api_v1/exportacao/: routers.py
app/router/api_v1/importacao/: routers.py
app/router/api_v1/processamento/: routers.py
app/router/api_v1/producao/: routers.py
