[tool.poetry]
name = "wine-api"
version = "0.1.0"
description = ""
authors = ["matheusfga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
aiohttp = "^3.10.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
